--- a/react_ws_src/package.json
+++ b/react_ws_src/package.json
@@ -28,6 +28,7 @@
     "get-size": "^2.0.2",
     "gsap": "^1.18.5",
     "jquery": "^3.1.0",
+    "nodemon": "^2.0.2",
     "object-assign": "^4.1.0",
     "react": "^15.2.0",
     "react-dom": "^15.2.0",
@@ -57,9 +58,10 @@
     "express": "^4.14.0",
     "extract-text-webpack-plugin": "^1.0.1",
     "file-loader": "^0.9.0",
+    "gulp-sass": "^4.0.2",
     "imports-loader": "^0.6.5",
     "jest-cli": "^13.2.3",
-    "node-sass": "^3.8.0",
+    "node-sass": "^4.13.1",
     "proxy-middleware": "^0.15.0",
     "react-addons-test-utils": "^15.2.0",
     "rimraf": "^2.5.3",
